cleanup menu sizing issues with overflow hidden and display inline-block discrepencies

--- a/www/static/styles/parts/_menu-mobile-landscape.scss
+++ b/www/static/styles/parts/_menu-mobile-landscape.scss
@@ -12,6 +12,8 @@
     .main {
         #logo {
             width:200px;
+            overflow: inherit;
+            @include rem(line-height, 7.5);
             img {
                 width:154px;
             }
