--- a/www/static/styles/parts/_menu-tablet.scss
+++ b/www/static/styles/parts/_menu-tablet.scss
@@ -24,7 +24,7 @@
             }
         }
         #logo {
-            margin:0;
+            @include rem(margin, 0,1);
             padding: 0;
             display: inline-block;
             overflow: hidden;
@@ -38,7 +38,7 @@
         }
         .links {
             display: inline-block;
-            width: ($tablet-width - 200);
+            width: ($tablet-width - 220);
             visibility: visible;
             max-height: 1000px;
             &.show {
@@ -105,7 +105,7 @@
                 li {
                     display: inline-block;
                     width: auto;
-                    @include rem(padding, 2.25rem, 0);
+                    @include rem(line-height, 7.5);
                     a {
                         @include rem(line-height, 3rem);
                         display: inline-block;
